[package]
name = "vienna"
description = "Multi-source p*rn downloader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
url = "2.2.2"
serde_json = "1.0.66"
indicatif = "0.16.2"

[dependencies.reqwest]
version = "0.11.4"
features = ["json", "blocking"]

[dependencies.serde]
version = "1.0.127"
features = ["derive"]